# email-components-rs

./: Cargo.toml  flake.nix
caniemail/: Cargo.toml
caniemail/data/: 2025-08-11.json
caniemail/src/: checker.rs  checks.rs  lib.rs
email-components/: Cargo.toml
email-components/src/: lib.rs  render.rs
email-components/src/components/: body.rs  button.rs  container.rs  email_html.rs  img.rs  link.rs  mod.rs  section.rs  text.rs
email-examples/: Cargo.toml
email-examples/examples/: print.rs  serve.rs
email-examples/src/: lib.rs  main.rs  render.rs
email-examples/src/email/: github.rs  mod.rs
src/: main.rs
src/components/: body.rs  button.rs  container.rs  email_html.rs  img.rs  link.rs  mod.rs  section.rs  text.rs
