[workspace]
resolver = "3"
members = ["email-components", "email-examples"]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tinybeachthor/email-components-rs"
homepage = "https://github.com/tinybeachthor/email-components-rs"

[workspace.dependencies]

email-components = { path = "./email-components" }

axum = "0.8.4"
stylist = "0.13.0"
tidier = "0.5.3"
tokio = "1.47.0"
yew = "0.21.0"
