[workspace]
resolver = "3"
members = [ "caniemail","email-components", "email-examples"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tinybeachthor/email-components-rs"
homepage = "https://github.com/tinybeachthor/email-components-rs"

[workspace.dependencies]

email-components = { path = "./email-components" }

axum = "0.8.4"
html_parser = "0.7.0"
stylist = "0.13.0"
serde = "1.0.219"
serde_json = "1.0.142"
thiserror = "2.0.14"
tidier = "0.5.3"
tokio = "1.47.0"
yew = "0.21.0"
