[package]
name = "email-components"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Components for building email templates"
categories = ["email", "template-engine"]
keywords = ["email", "template", "yew"]

[dependencies]
yew.workspace = true
