[package]
name = "email-components"
version = "0.1.0-alpha.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Components for building email templates"
categories = ["email", "template-engine"]
keywords = ["email", "template", "yew"]

[dependencies]
yew = { workspace = true, features = ["ssr"] }
stylist = { workspace = true, features = ["yew", "yew_use_style", "ssr"] }
